# gaggenau

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: v0_add_team_members.py
backend/app/: __init__.py  config.py  db.py  errors.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  assistant.py  team_members.py
docs/: ARCHITECTURE.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/public/: manifest.json  pcm-processor.js
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: team-members.ts
frontend/src/components/oven/: CenterKnob.tsx  DisplayPanel.tsx  Fascia.tsx  Knobs.tsx  Oven.tsx  SevenSeg.tsx  constants.ts  reducer.ts  types.ts  utils.ts
frontend/src/components/oven/assistant/: AssistantOverlay.tsx  api.ts  audio.ts  useAssistant.ts
frontend/src/components/oven/glyphs/: Icons.tsx  ModeGlyph.tsx
frontend/src/components/oven/screens/: ScreenContent.tsx
frontend/src/i18n/: context.tsx  de.ts  en.ts  index.ts  types.ts
frontend/src/pages/TeamMembers/: TeamMembersContext.tsx  index.tsx
frontend/src/pages/TeamMembers/components/: TeamMemberForm.tsx  TeamMemberItem.tsx
frontend/src/types/: api.ts
